--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "http://duybinh98.github.io/MedTestForCoordinator",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo build:web"
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-document-picker": "~8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-web-browser": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -19,12 +24,12 @@
     "react-native-modal-dropdown": "^0.7.0",
     "react-native-web": "~0.11.7",
     "react-native-windows": "^0.61.5",
-    "expo-document-picker": "~8.0.0",
-    "expo-web-browser": "~8.0.0"
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "gh-pages": "^2.2.0"
   },
   "private": true
 }
