--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "expo": "~36.0.0",
+    "expo-crypto": "^8.0.0",
     "expo-document-picker": "~8.0.0",
     "expo-image-picker": "~8.0.1",
     "expo-web-browser": "~8.0.0",
